--- a/youtube-frontend/index.html
+++ b/youtube-frontend/index.html
@@ -1,11 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Youtube
+      
+    </title>
+    <link rel="icon" type="image/jpeg" href="/media/images/common/a-1-fence-logo.webp" />
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Youtube
+      "
+    />
+    <meta
+      name="description"
+      content="A Legacy of Protection. A Vision for Tomorrow"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:url" content="https://vub.co.in" /> -->
+    <meta
+      property="og:title"
+      content="Youtube
+      "
+    />
+    <meta
+      property="og:description"
+      content="A Legacy of Protection. A Vision for Tomorrow"
+    />
+    <meta property="og:image" content="/media/images/common/a-1-fence-logo.webp" />
+    <meta
+      property="og:site_name"
+      content="Youtube
+      "
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta
+      name="twitter:title"
+      content="Youtube
+      "
+    />
+    <meta
+      name="twitter:description"
+      content="A Legacy of Protection. A Vision for Tomorrow"
+    />
+    <meta name="twitter:image" content="/media/images/common/a-1-fence-logo.webp" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
