--- a/youtube-frontend/index.html
+++ b/youtube-frontend/index.html
@@ -4,15 +4,15 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Youtube
+    <title>YouTube
       
     </title>
-    <link rel="icon" type="image/jpeg" href="/media/images/common/a-1-fence-logo.webp" />
+    <link rel="icon" type="image/jpeg" href="https://www.youtube.com/s/desktop/a3c20ab4/img/favicon.ico" />
 
     <!-- Primary Meta Tags -->
     <meta
       name="title"
-      content="Youtube
+      content="YouTube
       "
     />
     <meta
@@ -22,20 +22,19 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:url" content="https://vub.co.in" /> -->
     <meta
       property="og:title"
-      content="Youtube
+      content="YouTube
       "
     />
     <meta
       property="og:description"
       content="A Legacy of Protection. A Vision for Tomorrow"
     />
-    <meta property="og:image" content="/media/images/common/a-1-fence-logo.webp" />
+    <meta property="og:image" content="https://www.youtube.com/s/desktop/a3c20ab4/img/favicon.ico" />
     <meta
       property="og:site_name"
-      content="Youtube
+      content="YouTube
       "
     />
 
@@ -43,14 +42,14 @@
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="Youtube
+      content="YouTube
       "
     />
     <meta
       name="twitter:description"
       content="A Legacy of Protection. A Vision for Tomorrow"
     />
-    <meta name="twitter:image" content="/media/images/common/a-1-fence-logo.webp" />
+    <meta name="twitter:image" content="https://www.youtube.com/s/desktop/a3c20ab4/img/favicon.ico" />
   </head>
 
   <body>
